--- a/html/basics.html
+++ b/html/basics.html
@@ -1,18 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>This is the Title</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <!-- comment -->
 
+    <!-- tags -->
+    <!-- heading tags -->
+    <h1>This is a heading 1</h1>
+    <h2>This is a heading 1</h2>
+    <h3>This is a heading 1</h3>
+    <h4>This is a heading 1</h4>
+    <h5>This is a heading 1</h5>
+    <h6>This is a heading 1</h6>
+    <!-- paragraph -->
+    <p>This is a paragraph</p>
+    <p>This is a paragraph2 This is a paragraph2This is a paragraph2</p>
+    <p>This is a paragraph3</p>
 
-
+    <p>
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+      Lorem Ipsum has been the industry's standard dummy text ever since the
+      1500s, when an unknown printer took a galley of type and scrambled it to
+    </p>
+    <!-- text bold -->
+    <p>Lorem <b>ipsum</b>  dolor sit.</p>
+    <!-- italic -->
+    <p><i>Lorem, ipsum dolor sit amet consectetur adipisicing.</i> </p>
+    <!-- empasize -->
+    <p><em>Lorem, ipsum dolor.</em></p>
+    <!-- strong -->
+    <p>Lorem <strong>ipsum dolor</strong> ipsum dolor sit amet consectetur.</p>
 
     
-</body>
+
+
+
+   
+  </body>
 </html>
