--- a/html/table.html
+++ b/html/table.html
@@ -8,12 +8,24 @@
 </head>
 <body>
     
-    <table>
+    <table border="3">
         <thead>
             <th>Number</th>
             <th>Color</th>
             <th>Country</th>
         </thead>
+        <tr>
+            <td>250</td>
+            <td>Red</td>
+            <td>USA</td>
+
+        </tr>
+        <tr>
+            <td>100</td>
+            <td>Blue</td>
+            <td>France</td>
+        </tr>
+    
     </table>
 
 </body>
