--- a/html/form.html
+++ b/html/form.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <!-- <form class="" action="index.html" method="post"></form> -->
-   <form action="">
+   <!-- <form action="">
     <h1>Log In</h1>
     <h2>Please Input your Email and Password</h2>
 
@@ -17,8 +17,16 @@
     <input type="submit" name="submit" value="Click Me">
 
 
-   </form>
+   </form> -->
    
+   <form>
+        <h1>Choose Color</h1>
+        <h2>Click onButton!</h2>
+        <!-- <input type="color" name="" value=""> -->
+        <input type="text" name="" value="Text goes here">
+
+    
+   </form>
    
     
 
