--- a/html/form.html
+++ b/html/form.html
@@ -20,10 +20,12 @@
    </form> -->
    
    <form>
-        <h1>Choose Color</h1>
-        <h2>Click onButton!</h2>
+        <!-- <h1>Choose Color</h1>
+        <h2>Click onButton!</h2> -->
         <!-- <input type="color" name="" value=""> -->
         <input type="text" name="" value="Text goes here">
+
+
 
     
    </form>
