--- a/html/formexample.html
+++ b/html/formexample.html
@@ -10,8 +10,39 @@
     <h1>Course Sign Up Page</h1>
     <p>Please Note: All text fields required</p>
 
-    <form action="">
+    <form action="thankyou.html" method="get">
+        <label for="fm">First Name:</label>
+        <input type="text" id="fm" name="" placeholder="First Name" required>
+
+        <p></p>
+        <label for="ln">Last Name:</label>
+        <input type="text" id="ln" name="" placeholder="Last Name" required>
+
+        <p></p>
+        <label for="mail">Email:</label>
+        <input type="email" id="mail" name="" placeholder="user@gmail.com" required>
+        <p></p>
+        <label for="pass">Password:</label>
+        <input type="password" id="pass" name=""  required>
+        <p></p>
+        <p>Are you over 18?</p>
+        <label for="y">Yes:</label>
+        <input id="y" type="radio" name="over" value="yes">
+        <label for="n">No:</label>
+        <input id="n" type="radio" name="over" value="no">
         
+        <p>Do you have a Card or Paypal?</p>
+        <select name="payment" id="">
+            <option value="cc">Credit Card</option>
+            <option value="pp">Paypal</option>
+        </select>
+
+        <p></p>
+
+        <input type="submit" name="" id="" value="Sign Up">
+
+
+
     </form>
 
     
