--- a/css/part5.html
+++ b/css/part5.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylepart5.css">
     <title>CSS Exercise</title>
 </head>
 
 <body>
 
     <h1>Heading One</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Animi, dolorum!</p>
-
-    <p id="two">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, inventore! A dolorum eligendi deleniti quia.</p>
+    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem nam corporis rem quia non ad veritatis perferendis eos. Et, nemo consectetur. Quae consequatur officiis esse cupiditate officia magnam ducimus ab voluptate debitis, beatae exercitationem nemo, tempora aliquid? Sed soluta impedit praesentium minus. Vitae provident fugiat ipsam iste quae omnis eius, harum, accusamus maiores quibusdam eaque, in nesciunt asperiores facilis maxime.</p>
+    <br><br><br><br><br><br>
+    <p id="two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima tenetur adipisci fugiat, eius cumque inventore deleniti ducimus dignissimos laboriosam maxime possimus explicabo dicta omnis eaque laborum blanditiis consequuntur expedita illum error facilis quam dolorum labore. Corporis rem molestiae, ad laboriosam optio culpa est nemo suscipit illo esse doloremque maiores eligendi id ex quia voluptatibus, quo autem? Ipsum architecto optio, a quia, deserunt in asperiores atque eum non accusantium sed eos?</p>
 
 
 </body>
