--- a/html/spectrum.html
+++ b/html/spectrum.html
@@ -9,5 +9,16 @@
 </head>
 <body>
     <h1>My Spectrum</h1>
+    <table class="art">
+        <tr>
+            <td id="one"></td>
+            <td id="two"></td>
+            <td id="three"></td>
+            <td id="four"></td>
+            <td id="five"></td>
+            
+
+        </tr>
+    </table>
 </body>
 </html>
