--- a/project1/project1.html
+++ b/project1/project1.html
@@ -24,12 +24,16 @@
 
     <form action="thankyou.html" class="emailform" method="get"></form>
 
-    <label for="first"></label>
+    <label for="first">First Name:</label><br>
     <input type="text" name="first" value="">
-
+    <br>
+    <label for="last">Last Name:</label><br>
     <input type="text" name="last" value="">
+    <br>
+    <label for="email">Email:</label><br>
+    <input type="email" name="email" value=""><br>
 
-    <input type="text" name="email" value="">
+    <input id="sub" type="submit" name="" value="Sign Me Up!">
 
 
 
