--- a/project1/project1.html
+++ b/project1/project1.html
@@ -22,7 +22,7 @@
 
     <h2>Sign up for our launch!</h2>
 
-    <form action="thankyou.html" class="emailform" method="get"></form>
+    <form action="thankyou.html" class="emailform" method="get">
 
     <label for="first">First Name:</label><br>
     <input type="text" name="first" value="">
@@ -34,6 +34,8 @@
     <input type="email" name="email" value=""><br>
 
     <input id="sub" type="submit" name="" value="Sign Me Up!">
+
+  </form>
 
 
 
